package dev.daanh.zombie.location.enums;

public enum AccessState {
    OPEN,
    CLOSED,
    LOCKED,
    BARRICADED,
    BLOCKED,
    COLLAPSED,
    RESTRICTED,
    UNKNOWN
}
