package dev.daanh.zombie.location.enums;

public enum LocationCategory {
    RESIDENTIAL,
    COMMERCIAL,
    MEDICAL,
    GOVERNMENT,
    EDUCATION,
    INDUSTRIAL,
    TRANSPORT,
    UTILITY,
    MILITARY,
    RELIGIOUS,
    RECREATIONAL,
    NATURAL,
    INFRASTRUCTURE,
    SURVIVAL,
    UNKNOWN
}
