package dev.daanh.zombie.location.enums;

public enum LocationCondition {
    INTACT,
    WORN,
    DAMAGED,
    RUINED,
    BURNED,
    FLOODED,
    ABANDONED,
    OVERRUN,
    UNKNOWN
}
