package dev.daanh.zombie.location.enums;

public enum LocationSize {
    TINY,
    SMALL,
    MEDIUM,
    LARGE,
    HUGE
}
