package dev.daanh.zombie.location.enums;

public enum LocationType {
    HOUSE,
    APARTMENT_BUILDING,
    HOTEL,
    FARM,
    CABIN,

    SUPERMARKET,
    GENERAL_STORE,
    PHARMACY,
    RESTAURANT,
    GAS_STATION,

    HOSPITAL,
    CLINIC,

    POLICE_STATION,
    FIRE_STATION,
    TOWN_HALL,

    SCHOOL,
    UNIVERSITY,

    WAREHOUSE,
    FACTORY,
    WORKSHOP,
    CONSTRUCTION_SITE,

    TRAIN_STATION,
    BUS_STATION,
    AIRPORT,
    PORT,
    PARKING_LOT,

    POWER_PLANT,
    WATER_TREATMENT_PLANT,
    RADIO_TOWER,

    MILITARY_BASE,
    CHECKPOINT,
    BUNKER,

    CHURCH,
    CEMETERY,

    PARK,
    FOREST,
    BEACH,
    CAMPSITE,

    ROAD,
    BRIDGE,
    TUNNEL,

    SAFEHOUSE,
    SHELTER,
    RUINS,
    UNKNOWN
}
